--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Amazing Sidemenu</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -16,7 +19,15 @@
         <div class="bar3"></div>
     </div>
 
-    <div class="sidebar"></div>
+    <div class="sidebar">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
     
     <script src="main.js"></script>
 </body>
