making anchors good fixes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Careers</a></li>
             <li><a href="#">Contact</a></li>
+            
+            <a class="bottom-thing" href="#">Download Updated Profile</a>
         </ul>
     </div>
     
