fade section on toggle done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <a class="bottom-thing" href="#">Download Updated Profile</a>
         </ul>
     </div>
+
+    <div class="fade-area"></div>
+
+    <h2>Hello from Site</h2>
     
     <script src="main.js"></script>
 </body>
