--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Contact</a></li>
             
-            <a class="bottom-thing" href="#">Download Updated Profile</a>
+            <div class="bottom-thing">
+                <a href="#">Download Updated Profile</a>
+            </div>
         </ul>
     </div>
 
