awesome sidebar done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/5e80442309.js"></script>
+
 </head>
 <body>
 
@@ -20,6 +24,11 @@
     </div>
 
     <div class="sidebar">
+        <div class="socials">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
