--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="bar3"></div>
     </div>
 
-    <div class="sidebar">
+    <div class="sidebar side">
         <div class="socials">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
